<resources>
    <string name="app_name">Ribbon EMS</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>


    <string name="fm_icon">&#xf080;</string>
    <string name="node_icon">&#xf0ca;</string>
    <string name="cloud_icon">&#xf0c2;</string>
    <string name="performance_icon">&#xf0e4;</string>
    <string name="settings_cog_icon">&#xf013;</string>
    <string name="license_icon">&#xf09d;</string>
    <string name="users_icon">&#xf0c0;</string>
    <string name="logging_icon">&#xf0f1;</string>

    <!-- Strings related to login -->
    <string name="prompt_emsip">EMS IP</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="launch_url">/coreGui/ui/logon/launch.jsp</string>
    <string name="logon_url">/coreGui/ui/logon/</string>
    <string name="security_url">/coreGui/ui/logon/j_security_check</string>
    <string name="auth_session">/emxAuth/auth/getAuthSession</string>
    <string name="auth_login">/emxAuth/auth/login</string>
    <string name="fetch_nodes">/nodeMgmt/v1.0/nodes</string>
    <string name="fetch_emsnodes">/mobileems/nodelist</string>

    <string name="reverse">Reverse</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_center">Center</string>
    <string name="title_left">Left</string>
    <string name="title_right">Right</string>
    <string name="title_top">Top</string>
    <string name="title_top_left">Top Left</string>
    <string name="title_top_right">Top Right</string>
    <string name="title_bottom">Bottom</string>
    <string name="title_bottom_left">Bottom Left</string>
    <string name="title_bottom_right">Bottom Right</string>
    <string name="title_advanced_freeangle">Advanced: Free angle</string>
    <string name="title_advanced_tumblr">Advanced: Like a Tumblr</string>
    <string name="title_advanced_path">Advanced: Like a Path</string>

    <string name="note_center"><![CDATA[app:arc_origin=&quot;<b>center</b>&quot;<br/>Full arc of from 270 degrees]]></string>
    <string name="note_left"><![CDATA[app:arc_origin=&quot;<b>left</b>&quot;<br/>Semi arc of from 270 degrees]]></string>
    <string name="note_right"><![CDATA[app:arc_origin=&quot;<b>right</b>&quot;<br/>Semi arc of from 90 degrees]]></string>
    <string name="note_top"><![CDATA[app:arc_origin=&quot;<b>top</b>&quot;<br/>Semi arc of from 0 degrees]]></string>
    <string name="note_top_left"><![CDATA[app:arc_origin=&quot;<b>top|left</b>&quot;<br/>Quarter arc of from 0 degrees]]></string>
    <string name="note_top_right"><![CDATA[app:arc_origin=&quot;<b>top|right</b>&quot;<br/>Quarter arc of from 90 degrees]]></string>
    <string name="note_bottom"><![CDATA[app:arc_origin=&quot;<b>bottom</b>&quot;<br/>Semi arc of from 180 degrees]]></string>
    <string name="note_bottom_left"><![CDATA[app:arc_origin=&quot;<b>bottom|left</b>&quot;<br/>Quarter arc of from 270 degrees]]></string>
    <string name="note_bottom_right"><![CDATA[app:arc_origin=&quot;<b>bottom|right</b>&quot;<br/>Quarter arc of from 180 degrees]]></string>
    <string name="note_advanced_freeangle"><![CDATA[app:arc_freeAngle=&quot;<b>true</b>&quot;<br/>Can be free angle to place the child view]]></string>
    <string name="note_advanced_tumblr">Try pressing the button</string>
    <string name="note_advanced_path">Try pressing the button</string>
    <string name="title_activity_demo_like_tumblr">DemoLikeTumblrActivity</string>

    <string-array name="node_list">
        <item>Node 1</item>
        <item>Node 2</item>
        <item>Node 3</item>
        <item>Node 4</item>
        <item>Node 5</item>

    </string-array>



    <!--Node-menu-->
    <string name="sbc">SBC</string>
    <string name="insight">Insight</string>
    <string name="psx">PSX</string>
    <string name="gsx">GSX</string>
    <string name="dsc">DSC</string>
    <string name="sgx">SGX 4000</string>
    <string name="ads">ADS</string>
    <string name="asx">ASX</string>

</resources>
